[package]
name = "rust_raytracer"
version = "0.1.0"
authors = ["Duckfan77 <cwenthin@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
image = "0.23.14"
rayon = "1.5"
clap = "~2.33"